# cloudillo-rs

./: .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  rustfmt.toml  shell.nix
adapters/auth-adapter-sqlite/: Cargo.toml
adapters/auth-adapter-sqlite/src/: api_key.rs  auth.rs  cert.rs  crypto.rs  lib.rs  profile_key.rs  proxy_site.rs  schema.rs  tenant.rs  token.rs  utils.rs  vapid.rs  variable.rs  verification.rs  webauthn.rs
adapters/auth-adapter-sqlite/tests/: password_security_tests.rs  phase1_jwt_and_variables.rs  phase3_registration.rs  phase4_key_management.rs  phase5_webauthn.rs
adapters/blob-adapter-fs/: Cargo.toml
adapters/blob-adapter-fs/src/: lib.rs
adapters/blob-adapter-fs/tests/: basic_tests.rs  concurrency_tests.rs  error_handling_tests.rs  streaming_tests.rs
adapters/crdt-adapter-redb/: Cargo.toml
adapters/crdt-adapter-redb/src/: error.rs  lib.rs
adapters/crdt-adapter-redb/tests/: basic_operations.rs
adapters/meta-adapter-sqlite/: Cargo.toml  build.rs
adapters/meta-adapter-sqlite/src/: action.rs  calendar.rs  collection.rs  contact.rs  file.rs  file_user_data.rs  installed_app.rs  lib.rs  profile.rs  push.rs  reference.rs  schema.rs  setting.rs  share.rs  tag.rs  task.rs  tenant.rs  utils.rs
adapters/meta-adapter-sqlite/tests/: calendar_tests.rs  crud_tests.rs  query_tests.rs  reference_tests.rs
adapters/rtdb-adapter-redb/: Cargo.toml
adapters/rtdb-adapter-redb/src/: error.rs  index.rs  instance.rs  lib.rs  query.rs  storage.rs  transaction.rs
adapters/rtdb-adapter-redb/tests/: integration_tests.rs  storage_tests.rs  transaction_tests.rs
basic-server/: Cargo.toml
basic-server/src/: action.rs  auth_adapter.rs  main.rs
basic-server/src/action/: action.rs  handler.rs
crates/cloudillo/: Cargo.toml
crates/cloudillo-action/: Cargo.toml
crates/cloudillo-action/src/: audience.rs  delivery.rs  fanout.rs  filter.rs  forward.rs  handler.rs  helpers.rs  history_sync.rs  hooks.rs  key_cache.rs  lib.rs  perm.rs  post_store.rs  process.rs  settings.rs  subject_ref.rs  task.rs
crates/cloudillo-admin/: Cargo.toml
crates/cloudillo-admin/src/: cert.rs  email.rs  invite.rs  lib.rs  perm.rs  prelude.rs  tenant.rs
crates/cloudillo-auth/: Cargo.toml
crates/cloudillo-auth/src/: api_key.rs  cleanup.rs  handler.rs  lib.rs  qr_login.rs  settings.rs  webauthn.rs
crates/cloudillo-calendar/: Cargo.toml
crates/cloudillo-calendar/src/: caldav.rs  handler.rs  ical.rs  lib.rs  types.rs
crates/cloudillo-contact/: Cargo.toml
crates/cloudillo-contact/src/: carddav.rs  handler.rs  lib.rs  profile_overlay.rs  types.rs  vcard.rs
crates/cloudillo-core/: Cargo.toml
crates/cloudillo-core/src/: abac.rs  acme.rs  app.rs  bootstrap_types.rs  core_settings.rs  create_perm.rs  dir_cache.rs  dns.rs  extensions.rs  extract.rs  file_access.rs  lib.rs  log.rs  middleware.rs  prelude.rs  profile_me_cache.rs  profile_visibility.rs  proxy_token_cache.rs  request.rs  roles.rs  scheduler.rs  ws_broadcast.rs  ws_bus.rs
crates/cloudillo-core/tests/: file_access_scope.rs
crates/cloudillo-crdt/: Cargo.toml
crates/cloudillo-crdt/src/: lib.rs  websocket.rs
crates/cloudillo-dav/: Cargo.toml
crates/cloudillo-dav/src/: auth.rs  consts.rs  http.rs  lib.rs  multistatus.rs  propfind.rs  propfind_util.rs  report.rs
crates/cloudillo-email/: Cargo.toml
crates/cloudillo-email/src/: lib.rs  sender.rs  settings.rs  task.rs  template.rs
crates/cloudillo-file/: Cargo.toml
crates/cloudillo-file/src/: apkg.rs  audio.rs  blob_gc.rs  container.rs  descriptor.rs  dir_cache.rs  duplicate.rs  ffmpeg.rs  filter.rs  gc.rs  handler.rs  image.rs  lib.rs  management.rs  pdf.rs  perm.rs  preset.rs  settings.rs  share.rs  store.rs  svg.rs  sync.rs  tag.rs  variant.rs  video.rs
crates/cloudillo-idp/: Cargo.toml
crates/cloudillo-idp/src/: api_keys.rs  handler.rs  lib.rs  registration.rs  settings.rs
crates/cloudillo-profile/: Cargo.toml
crates/cloudillo-profile/src/: community.rs  handler.rs  idp_status.rs  lib.rs  list.rs  media.rs  perm.rs  register.rs  settings.rs  sync.rs  update.rs  welcome_hook.rs
crates/cloudillo-proxy/: Cargo.toml
crates/cloudillo-proxy/src/: admin.rs  handler.rs  lib.rs  protocol.rs
crates/cloudillo-push/: Cargo.toml
crates/cloudillo-push/src/: handler.rs  lib.rs  send.rs  settings.rs
crates/cloudillo-ref/: Cargo.toml
crates/cloudillo-ref/src/: handler.rs  lib.rs  service.rs
crates/cloudillo-rtdb/: Cargo.toml
crates/cloudillo-rtdb/src/: aggregate.rs  computed.rs  lib.rs  merge.rs  prelude.rs  websocket.rs
crates/cloudillo-types/: Cargo.toml
crates/cloudillo-types/src/: abac.rs  action_types.rs  address.rs  auth_adapter.rs  blob_adapter.rs  crdt_adapter.rs  error.rs  extract.rs  hasher.rs  identity_provider_adapter.rs  lib.rs  meta_adapter.rs  prelude.rs  reactions.rs  rtdb_adapter.rs  types.rs  utils.rs  validation.rs  worker.rs
crates/cloudillo/src/: app.rs  bootstrap.rs  lib.rs  prelude.rs  routes.rs  webserver.rs  websocket.rs
crates/cloudillo/tests/: patch_tests.rs  websocket_protocol_tests.rs
server/: Cargo.toml
server/src/: auth_adapter.rs  blob_adapter.rs  bootstrap.rs  crdt_adapter.rs  error.rs  file.rs  identity_provider_adapter.rs  lib.rs  main.rs  meta_adapter.rs  prelude.rs  routes.rs  rtdb_adapter.rs  types.rs  utils.rs  worker.rs  worker.sav.rs
server/src/action/: action.rs  audience.rs  delivery.rs  filter.rs  forward.rs  handler.rs  helpers.rs  hooks.rs  key_cache.rs  mod.rs  native_hooks.rs  perm.rs  post_store.rs  process.rs  settings.rs  task.rs  types.rs
server/src/admin/: email.rs  invite.rs  mod.rs  perm.rs  tenant.rs
server/src/auth/: api_key.rs  cleanup.rs  handler.rs  mod.rs  register.rs  settings.rs  webauthn.rs
server/src/collection/: handler.rs  mod.rs
server/src/core/: abac.rs  acme.rs  address.rs  app.rs  create_perm.rs  dns.rs  extract.rs  file_access.rs  hasher.rs  middleware.rs  mod.rs  request.rs  roles.rs  route_auth.rs  scheduler.rs  settings.rs  utils.rs  webserver.rs  websocket.rs  worker.rs  ws_bus.rs  (+1 more)
server/tests/: patch_tests.rs  websocket_protocol_tests.rs
(+157 files in other folders)
