[workspace]
resolver = "2"
members = [
	"server",
	"crates/cloudillo",
	"crates/cloudillo-types",
	"crates/cloudillo-core",
	"crates/cloudillo-file",
	"crates/cloudillo-push",
	"crates/cloudillo-crdt",
	"crates/cloudillo-rtdb",
	"crates/cloudillo-ref",
	"crates/cloudillo-email",
	"crates/cloudillo-auth",
	"crates/cloudillo-proxy",
	"crates/cloudillo-idp",
	"crates/cloudillo-admin",
	"crates/cloudillo-profile",
	"crates/cloudillo-action",
	"adapters/auth-adapter-sqlite",
	"adapters/blob-adapter-fs",
	"adapters/meta-adapter-sqlite",
	"adapters/rtdb-adapter-redb",
	"adapters/crdt-adapter-redb",
]

[workspace.package]
version = "0.8.8"
edition = "2021"

[profile.release-lto]
opt-level = "s"
inherits = "release"
lto = true
codegen-units = 1
strip = true
