[workspace]
resolver = "2"
members = [
	"server",
	"crates/cloudillo",
	"crates/cloudillo-types",
	"crates/cloudillo-core",
	"crates/cloudillo-file",
	"crates/cloudillo-push",
	"crates/cloudillo-crdt",
	"crates/cloudillo-rtdb",
	"crates/cloudillo-ref",
	"crates/cloudillo-email",
	"crates/cloudillo-auth",
	"crates/cloudillo-proxy",
	"crates/cloudillo-idp",
	"crates/cloudillo-admin",
	"crates/cloudillo-profile",
	"crates/cloudillo-action",
	"adapters/auth-adapter-sqlite",
	"adapters/blob-adapter-fs",
	"adapters/meta-adapter-sqlite",
	"adapters/rtdb-adapter-redb",
	"adapters/crdt-adapter-redb",
]

[workspace.package]
version = "0.8.9"
edition = "2021"
license = "LGPL-3.0-only"
repository = "https://github.com/cloudillo/cloudillo-rs"
homepage = "https://cloudillo.org"
authors = ["Szilárd Hajba <szilu@symbion.hu>"]

[workspace.dependencies]
cloudillo = { version = "0.8.9", path = "crates/cloudillo" }
cloudillo-types = { version = "0.8.9", path = "crates/cloudillo-types", features = ["server"] }
cloudillo-core = { version = "0.8.9", path = "crates/cloudillo-core" }
cloudillo-file = { version = "0.8.9", path = "crates/cloudillo-file" }
cloudillo-push = { version = "0.8.9", path = "crates/cloudillo-push" }
cloudillo-crdt = { version = "0.8.9", path = "crates/cloudillo-crdt" }
cloudillo-rtdb = { version = "0.8.9", path = "crates/cloudillo-rtdb" }
cloudillo-ref = { version = "0.8.9", path = "crates/cloudillo-ref" }
cloudillo-email = { version = "0.8.9", path = "crates/cloudillo-email" }
cloudillo-auth = { version = "0.8.9", path = "crates/cloudillo-auth" }
cloudillo-proxy = { version = "0.8.9", path = "crates/cloudillo-proxy" }
cloudillo-idp = { version = "0.8.9", path = "crates/cloudillo-idp" }
cloudillo-admin = { version = "0.8.9", path = "crates/cloudillo-admin" }
cloudillo-profile = { version = "0.8.9", path = "crates/cloudillo-profile" }
cloudillo-action = { version = "0.8.9", path = "crates/cloudillo-action" }
cloudillo-auth-adapter-sqlite = { version = "0.8.9", path = "adapters/auth-adapter-sqlite" }
cloudillo-meta-adapter-sqlite = { version = "0.8.9", path = "adapters/meta-adapter-sqlite" }
cloudillo-blob-adapter-fs = { version = "0.8.9", path = "adapters/blob-adapter-fs" }
cloudillo-rtdb-adapter-redb = { version = "0.8.9", path = "adapters/rtdb-adapter-redb" }
cloudillo-crdt-adapter-redb = { version = "0.8.9", path = "adapters/crdt-adapter-redb" }

[workspace.lints.rust]
unsafe_code = "forbid"
ambiguous_negative_literals = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
literal_string_with_formatting_args = "allow"
module_name_repetitions = "allow"
# Pedantic opt-outs: not worth fixing across the codebase right now
doc_markdown = "allow"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
uninlined_format_args = "allow"
similar_names = "allow"
unused_async = "allow"
too_many_lines = "allow"

[profile.release-lto]
opt-level = "s"
inherits = "release"
lto = true
codegen-units = 1
strip = true
