[package]
name = "cloudillo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
auth-adapter-sqlite = { path = "../adapters/auth-adapter-sqlite" }
meta-adapter-sqlite = { path = "../adapters/meta-adapter-sqlite" }
cloudillo = { path = "../server" }
tokio = { version = "1.43.0", features = ["rt", "macros", "fs"] }
