[package]
name = "cloudillo-basic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cloudillo-auth-adapter-sqlite = { path = "../adapters/auth-adapter-sqlite" }
cloudillo-blob-adapter-fs = { path = "../adapters/blob-adapter-fs" }
cloudillo-meta-adapter-sqlite = { path = "../adapters/meta-adapter-sqlite" }
cloudillo-crdt-adapter-redb = { path = "../adapters/crdt-adapter-redb" }
cloudillo-rtdb-adapter-redb = { path = "../adapters/rtdb-adapter-redb" }
cloudillo = { path = "../server" }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
