[package]
name = "cloudillo-server"
version.workspace = true
edition.workspace = true

[dependencies]
cloudillo-auth-adapter-sqlite = { path = "../adapters/auth-adapter-sqlite" }
cloudillo-blob-adapter-fs = { path = "../adapters/blob-adapter-fs" }
cloudillo-meta-adapter-sqlite = { path = "../adapters/meta-adapter-sqlite" }
cloudillo-crdt-adapter-redb = { path = "../adapters/crdt-adapter-redb" }
cloudillo-rtdb-adapter-redb = { path = "../adapters/rtdb-adapter-redb" }
cloudillo = { path = "../crates/cloudillo" }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
