[package]
name = "cloudillo-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Reference Cloudillo server binary with SQLite, filesystem, and redb adapters for self-hosted deployment"
keywords = ["cloudillo", "server", "self-hosted", "federation"]
categories = ["web-programming", "network-programming"]
readme = "../README.md"

[dependencies]
cloudillo-auth-adapter-sqlite = { workspace = true }
cloudillo-blob-adapter-fs = { workspace = true }
cloudillo-meta-adapter-sqlite = { workspace = true }
cloudillo-crdt-adapter-redb = { workspace = true }
cloudillo-rtdb-adapter-redb = { workspace = true }
cloudillo = { workspace = true }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
