[package]
name = "cloudillo-auth-adapter-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bcrypt = "0.17.1"
cloudillo = { path = "../../server" }
jsonwebtoken = "9.3.1"
p384 = { version = "0.13.1", features = ["pkcs8", "pem"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
time = { version = "0.3.44", features = ["local-offset"] }
zeroize = "1.8.2"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
