[package]
name = "cloudillo-auth-adapter-sqlite"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bcrypt = "0.18.0"
cloudillo = { path = "../../server" }
jsonwebtoken = "10.3.0"
p256 = { version = "0.13.2", features = ["pkcs8", "pem"] }
p384 = { version = "0.13.1", features = ["pkcs8", "pem"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
time = { version = "0.3.47", features = ["local-offset"] }
zeroize = "1.8.2"
tokio = { version = "1.49.0", features = ["fs"] }

[dev-dependencies]
tempfile = "3.25"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
