[package]
name = "cloudillo-blob-adapter-fs"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.89"
cloudillo = { path = "../../server" }
futures-core = "0.3.31"
tokio = { version = "1.49.0", features = ["fs"] }
tokio-util = { version = "0.7.18", features = ["io"] }

[dev-dependencies]
tempfile = "3.25"
tokio = { version = "1.49.0", features = ["fs", "rt"] }
