[package]
name = "cloudillo-crdt-adapter-redb"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cloudillo = { path = "../../server" }

# Core dependencies
redb = "3.1"
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
futures-core = "0.3"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.23"
