[package]
name = "cloudillo-crdt-adapter-redb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "redb-backed CRDT document persistence adapter for Cloudillo, storing binary Yjs updates"
keywords = ["cloudillo", "redb", "crdt", "adapter", "yjs"]
categories = ["database-implementations", "concurrency"]
readme = "../../README.md"

[dependencies]
cloudillo-types = { workspace = true }

# Core dependencies
redb = "3.1"
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
futures-core = "0.3"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.25"
