[package]
name = "cloudillo-meta-adapter-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "SQLite-backed metadata adapter for Cloudillo: profiles, actions, files, tasks, and references"
keywords = ["cloudillo", "sqlite", "metadata", "adapter", "storage"]
categories = ["database-implementations", "database"]
readme = "../../README.md"

[dependencies]
async-trait = "0.1.89"
cloudillo = { package = "cloudillo-types", path = "../../crates/cloudillo-types", version = "0.8.8" }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.49.0", features = ["fs"] }

[dev-dependencies]
tempfile = "3.25"
tokio = { version = "1.49.0", features = ["rt"] }
