[package]
name = "cloudillo-meta-adapter-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "SQLite-backed metadata adapter for Cloudillo: profiles, actions, files, tasks, and references"
keywords = ["cloudillo", "sqlite", "metadata", "adapter", "storage"]
categories = ["database-implementations", "database"]
readme = "../../README.md"

[dependencies]
async-trait = "0.1.89"
cloudillo-types = { workspace = true }
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["fs"] }

[dev-dependencies]
tempfile = "3.27"
tokio = { version = "1.52.3", features = ["rt", "macros"] }

[lints]
workspace = true
