[package]
name = "cloudillo-rtdb-adapter-redb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "redb-backed real-time database adapter for Cloudillo with subscriptions and transactions"
keywords = ["cloudillo", "redb", "realtime", "database", "adapter"]
categories = ["database-implementations", "database"]
readme = "../../README.md"

[dependencies]
cloudillo = { package = "cloudillo-types", path = "../../crates/cloudillo-types", version = "0.8.8" }

# Core dependencies
redb = "3.1"
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
futures-core = "0.3"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.25"
