[package]
name = "cloudillo-action"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Federated activity system for Cloudillo: signed posts, comments, reactions, and a declarative Action DSL"
keywords = ["cloudillo", "federation", "activity", "dsl", "social"]
categories = ["web-programming", "network-programming"]
readme = "../../README.md"

[dependencies]
cloudillo-core = { workspace = true }
cloudillo-types = { workspace = true }
cloudillo-file = { workspace = true }
cloudillo-idp = { workspace = true }
cloudillo-push = { workspace = true }

async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "macros"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lru = "0.16"
parking_lot = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
