[package]
name = "cloudillo-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Admin API endpoints for system administration of a Cloudillo instance"
keywords = ["cloudillo", "admin", "api", "management"]
categories = ["web-programming"]
readme = "../../README.md"

[dependencies]
cloudillo-core = { workspace = true }
cloudillo-types = { workspace = true }
cloudillo-ref = { workspace = true }
cloudillo-email = { workspace = true }

axum = { version = "0.8", features = ["http2", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tracing = "0.1"
