[package]
name = "cloudillo-auth"
version.workspace = true
edition.workspace = true

[dependencies]
cloudillo-core = { path = "../cloudillo-core" }
cloudillo-types = { path = "../cloudillo-types", features = ["server"] }
cloudillo-email = { path = "../cloudillo-email" }
cloudillo-ref = { path = "../cloudillo-ref" }

async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "macros"] }
base64 = "0.22"
chrono = "0.4"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.16"
tracing = "0.1"
tokio = { version = "1", features = ["rt"] }
url = "2"
uuid = { version = "1.21", features = ["v4"] }

# Auth-specific (exclusive to this crate)
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
