[package]
name = "cloudillo-crdt"
version.workspace = true
edition.workspace = true

[dependencies]
cloudillo-core = { path = "../cloudillo-core" }
cloudillo-types = { path = "../cloudillo-types", features = ["server"] }

axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"

# CRDT (exclusive to this crate)
yrs = "0.25"
