[package]
name = "cloudillo-email"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Email notification system for Cloudillo with Handlebars templates and SMTP delivery"
keywords = ["cloudillo", "email", "smtp", "templates", "notifications"]
categories = ["web-programming", "email"]
readme = "../../README.md"

[dependencies]
cloudillo-core = { workspace = true }
cloudillo-types = { workspace = true }

async-trait = "0.1"
handlebars = "6.4"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "rustls-tls", "tokio1", "tokio1-rustls", "smtp-transport"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
