[package]
name = "cloudillo-idp"
version.workspace = true
edition.workspace = true

[dependencies]
cloudillo-core = { path = "../cloudillo-core" }
cloudillo-types = { path = "../cloudillo-types", features = ["server"] }
cloudillo-ref = { path = "../cloudillo-ref" }
cloudillo-email = { path = "../cloudillo-email" }

axum = { version = "0.8", features = ["http2", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
