[package]
name = "cloudillo-profile"
version.workspace = true
edition.workspace = true

[dependencies]
cloudillo-core = { path = "../cloudillo-core" }
cloudillo-types = { path = "../cloudillo-types", features = ["server"] }
cloudillo-file = { path = "../cloudillo-file" }
cloudillo-email = { path = "../cloudillo-email" }
cloudillo-idp = { path = "../cloudillo-idp" }
cloudillo-ref = { path = "../cloudillo-ref" }

async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "macros"] }
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tracing = "0.1"
