[package]
name = "cloudillo-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Profile management subsystem for the Cloudillo federated collaboration platform"
keywords = ["cloudillo", "profile", "user", "federation", "social"]
categories = ["web-programming"]
readme = "../../README.md"

[dependencies]
cloudillo-core = { workspace = true }
cloudillo-types = { workspace = true }
cloudillo-file = { workspace = true }
cloudillo-email = { workspace = true }
cloudillo-idp = { workspace = true }
cloudillo-ref = { workspace = true }

async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "macros"] }
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tracing = "0.1"

[lints]
workspace = true
