[package]
name = "cloudillo-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Reverse proxy with TLS for proxying HTTP and WebSocket traffic in the Cloudillo platform"
keywords = ["cloudillo", "proxy", "reverse-proxy", "tls", "websocket"]
categories = ["web-programming", "network-programming"]
readme = "../../README.md"

[dependencies]
cloudillo-core = { workspace = true }
cloudillo-types = { workspace = true }

axum = { version = "0.8", features = ["http2", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.16"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
url = "2"

# TLS certificate handling (proxy site cache cert loading)
rustls = "0.23"
rustls-pki-types = { version = "1.14", features = ["alloc"] }

# HTTP client for proxying (exclusive to this crate)
hyper = "1.8"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
hyper-rustls = "0.27"
http-body-util = "0.1"
